--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: "^0.13.1"
+  
 
 flutter_launcher_icons:
   android: "launcher_icon"
