--- a/testing/pubspec.yaml
+++ b/testing/pubspec.yaml
@@ -39,14 +39,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
-
-flutter_launcher_icons:
-  android: "launcher_icon"
-  ios: true
-  image_path: "assets/logo/logo.jpg"
-  min_sdk_android: 21 # android min sdk min:16, default 21
+# android min sdk min:16, default 21
  
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -55,6 +49,13 @@ flutter_launcher_icons:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo/logo.jpg"
+  min_sdk_android: 21 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -69,7 +70,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/logo/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
