--- a/mydrive/pubspec.yaml
+++ b/mydrive/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   meta: ^1.1.8 
+  pie_chart: ^5.3.2
 
 dependency_overrides:
   path_provider: 2.0.1
